--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
   <body>
     <div class="container">
       <div class="board">
+        <audio src="./sounds/key01.mp3" id="key01"></audio>
+        <audio src="./sounds/key02.mp3" id="key02"></audio>
+        <audio src="./sounds/key03.mp3" id="key03"></audio>
+        <audio src="./sounds/key04.mp3" id="key04"></audio>
+        <audio src="./sounds/key05.mp3" id="key05"></audio>
+        <audio src="./sounds/key06.mp3" id="key06"></audio>
+        <audio src="./sounds/key07.mp3" id="key07"></audio>
+        <audio src="./sounds/key08.mp3" id="key08"></audio>
+        <audio src="./sounds/key09.mp3" id="key09"></audio>
+        <audio src="./sounds/key10.mp3" id="key10"></audio>
+        <audio src="./sounds/key11.mp3" id="key11"></audio>
+        <audio src="./sounds/key12.mp3" id="key12"></audio>
+        <audio src="./sounds/key13.mp3" id="key13"></audio>
+        <audio src="./sounds/key14.mp3" id="key14"></audio>
+        <audio src="./sounds/key15.mp3" id="key15"></audio>
+        <audio src="./sounds/key16.mp3" id="key16"></audio>
+        <audio src="./sounds/key17.mp3" id="key17"></audio>
+        <audio src="./sounds/key18.mp3" id="key18"></audio>
+        <audio src="./sounds/key19.mp3" id="key19"></audio>
+        <audio src="./sounds/key20.mp3" id="key20"></audio>
+        <audio src="./sounds/key21.mp3" id="key21"></audio>
+        <audio src="./sounds/key22.mp3" id="key22"></audio>
+        <audio src="./sounds/key23.mp3" id="key23"></audio>
+        <audio src="./sounds/key24.mp3" id="key24"></audio>
+        <audio src="./sounds/key25.mp3" id="key25"></audio>
+
         <button id="play">PLAY</button>
         <div class="loserDisplayPage">
           <p class="loser" id="loser" style="display: none">GAME OVER.</p>
@@ -31,31 +57,35 @@
         </div>
 
         <div id="grid" class="grid" style="display: none">
-          <button value="0" class="numbers zero" disabled>0</button>
-          <button value="1" class="numbers one" disabled>1</button>
-          <button value="2" class="numbers two" disabled>2</button>
-          <button value="3" class="numbers three" disabled>3</button>
-          <button value="4" class="numbers four" disabled>4</button>
-          <button value="5" class="numbers five" disabled>5</button>
-          <button value="6" class="numbers six" disabled>6</button>
-          <button value="7" class="numbers seven" disabled>7</button>
-          <button value="8" class="numbers eight" disabled>8</button>
-          <button value="9" class="numbers nine" disabled>9</button>
-          <button value="10" class="numbers ten" disabled>10</button>
-          <button value="11" class="numbers eleven" disabled>11</button>
-          <button value="12" class="numbers twelve" disabled>12</button>
-          <button value="13" class="numbers thirteen" disabled>13</button>
-          <button value="14" class="numbers fourteen" disabled>14</button>
-          <button value="15" class="numbers fifteen" disabled>15</button>
-          <button value="16" class="numbers sixteen" disabled>16</button>
-          <button value="17" class="numbers seventeen" disabled>17</button>
-          <button value="18" class="numbers eighteen" disabled>18</button>
-          <button value="19" class="numbers nineteen" disabled>19</button>
-          <button value="20" class="numbers twenty" disabled>20</button>
-          <button value="21" class="numbers twentyone" disabled>21</button>
-          <button value="22" class="numbers twentytwo" disabled>22</button>
-          <button value="23" class="numbers twentythree" disabled>23</button>
-          <button value="24" class="numbers twentyfour" disabled>24</button>
+          <button value="0" class="numbers" disabled id="zero">0</button>
+          <button value="1" class="numbers" disabled id="one">1</button>
+          <button value="2" class="numbers" disabled id="two">2</button>
+          <button value="3" class="numbers" disabled id="three">3</button>
+          <button value="4" class="numbers" disabled id="four">4</button>
+          <button value="5" class="numbers" disabled id="five">5</button>
+          <button value="6" class="numbers" disabled id="six">6</button>
+          <button value="7" class="numbers" disabled id="seven">7</button>
+          <button value="8" class="numbers" disabled id="eight">8</button>
+          <button value="9" class="numbers" disabled id="nine">9</button>
+          <button value="10" class="numbers" disabled id="ten">10</button>
+          <button value="11" class="numbers" disabled id="eleven">11</button>
+          <button value="12" class="numbers" disabled id="twelve">12</button>
+          <button value="13" class="numbers" disabled id="thirteen">13</button>
+          <button value="14" class="numbers" disabled id="fourteen">14</button>
+          <button value="15" class="numbers" disabled id="fifteen">15</button>
+          <button value="16" class="numbers" disabled id="sixteen">16</button>
+          <button value="17" class="numbers" disabled id="seventeen">17</button>
+          <button value="18" class="numbers" disabled id="eighteen">18</button>
+          <button value="19" class="numbers" disabled id="nineteen">19</button>
+          <button value="20" class="numbers" disabled id="twenty">20</button>
+          <button value="21" class="numbers" disabled id="twentyone">21</button>
+          <button value="22" class="numbers" disabled id="twentytwo">22</button>
+          <button value="23" class="numbers" disabled id="twentythree">
+            23
+          </button>
+          <button value="24" class="numbers" disabled id="twentyfour">
+            24
+          </button>
         </div>
       </div>
     </div>
